Add window as a global var

--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     },
     "collectCoverageFrom": [
       "src/*.{js,ts}"
-    ]
+    ],
+    "globals": {
+      "window": {}
+    }
   },
   "prettier": {
     "semi": false,
