--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
+    "@types/webrtc": "0.0.26",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
@@ -111,7 +112,7 @@
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-prettier": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.18.0",
+    "rollup-plugin-typescript2": "^0.29.0",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
@@ -120,8 +121,9 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.12.0",
-    "typescript": "^3.0.3"
+    "typedoc": "^0.20.13",
+    "typescript": "^3.0.3",
+    "wrtc": "^0.4.6"
   },
   "dependencies": {
     "@peermetrics/webrtc-stats": "^2.2.3",
