Setup jest globals

--- a/package.json
+++ b/package.json
@@ -73,7 +73,10 @@
     ],
     "globals": {
       "window": {}
-    }
+    },
+    "setupFiles": [
+      "./setup.jest.js"
+    ]
   },
   "prettier": {
     "semi": false,
