--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "wrtc": "^0.4.6"
   },
   "dependencies": {
-    "@peermetrics/webrtc-stats": "github:buddhikajay/webrtc-stats",
+    "@peermetrics/webrtc-stats": "github:buddhikajay/webrtc-stats#3e6ab7a381ee4fc62a11e88484c7503c10712d6a",
     "axios": "^0.21.1"
   }
 }
