--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --theme minimal src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
@@ -126,7 +126,7 @@
     "wrtc": "^0.4.6"
   },
   "dependencies": {
-    "@peermetrics/webrtc-stats": "github:buddhikajay/webrtc-stats#3e6ab7a381ee4fc62a11e88484c7503c10712d6a",
+    "@peermetrics/webrtc-stats": "^2.2.3",
     "axios": "^0.21.1"
   }
 }
