--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "dist/lib-call-quality-monitoring.umd.js",
   "module": "dist/lib-call-quality-monitoring.es5.js",
+  "browser": "dist/browser.js",
   "typings": "dist/types/lib-call-quality-monitoring.d.ts",
   "files": [
     "dist"
