--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
+    "travis-deploy-once": "travis-deploy-once",
+    "serve": "npm run build && npm run copy && http-server dist",
+    "copy": "cpy './src/index.html' './dist'"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -96,8 +98,10 @@
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
+    "cpy-cli": "^3.1.1",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
+    "http-server": "^0.12.3",
     "husky": "^1.0.1",
     "jest": "^23.6.0",
     "jest-config": "^23.6.0",
