--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
-    "preact": "^10.6.0"
+    "preact": "^10.6.0",
+    "unistore": "^3.5.2"
   }
 }
