--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "cpy-cli": "^3.1.1",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
+    "dotenv": "^10.0.0",
     "husky": "^1.0.1",
     "jest": "^23.6.0",
     "jest-config": "^23.6.0",
@@ -142,6 +143,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
     "preact": "^10.6.0",
+    "socket.io-client": "^4.4.0",
     "unistore": "^3.5.2"
   }
 }
