Chnage plugin space to client space

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib-call-quality-monitoring",
+  "name": "@meetrix/lib-webrtc-monitoring",
   "version": "0.0.1",
   "description": "",
   "keywords": [],
