Feat/show stats on dashboard

--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@peermetrics/webrtc-stats": "github:buddhikajay/webrtc-stats",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git#master",
     "axios": "^0.21.1",
     "nanoid": "^3.1.30",
     "preact": "^10.6.0",
