--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,10 @@ package:
     - npm install
     - CI=false npm run build
     - cd build
-    - tar -cjSf webrtc-dashboard.tar.bz2 *
+    - tar -cjSf lib-monitoring.tar.bz2 *
   artifacts:
     paths:
-      - build/webrtc-dashboard.tar.bz2
+      - build/lib-monitoring.tar.bz2
   only:
     - feat/dashboard-log-devices-browserinfo
     - tags
@@ -29,9 +29,9 @@ staging_deploy:
   environment:
     name: staging
   script:
-    - scp -o StrictHostKeyChecking=no build/webrtc-dashboard.tar.bz2 $STAGING_SSH_USER@$STAGING_SSH_HOST:/var/www/webrtc-dashboard/releases/
-    - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/webrtc-dashboard/releases && mkdir $CI_PIPELINE_ID && tar -xf webrtc-dashboard.tar.bz2 -C $CI_PIPELINE_ID"
-    - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/webrtc-dashboard && ln -sfn releases/$CI_PIPELINE_ID current"
+    - scp -o StrictHostKeyChecking=no build/lib-monitoring.tar.bz2 $STAGING_SSH_USER@$STAGING_SSH_HOST:/var/www/lib-monitoring/releases/
+    - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/lib-monitoring/releases && mkdir $CI_PIPELINE_ID && tar -xf lib-monitoring.tar.bz2 -C $CI_PIPELINE_ID"
+    - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/lib-monitoring && ln -sfn releases/$CI_PIPELINE_ID current"
   only:
     - feat/dashboard-log-devices-browserinfo
 
