--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ package:
     paths:
       - dist/lib-monitoring.tar.bz2
   only:
-    - feat/dashboard-log-devices-browserinfo
+    - master
     - tags
 
 before_script:
@@ -34,7 +34,7 @@ staging_deploy:
     - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/lib-monitoring/releases && mkdir $CI_PIPELINE_ID && tar -xf lib-monitoring.tar.bz2 -C $CI_PIPELINE_ID"
     - ssh $STAGING_SSH_USER@$STAGING_SSH_HOST "cd /var/www/lib-monitoring && ln -sfn releases/$CI_PIPELINE_ID current"
   only:
-    - feat/dashboard-log-devices-browserinfo
+    - master
 
 production_deploy:
   stage: deploy
