--- a/package.json
+++ b/package.json
@@ -152,11 +152,11 @@
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.7.1",
-    "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git#feat/dashboard-log-devices-browserinfo",
+    "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git#fix/update-webrtc-stats-repository",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.5.1",
-    "@peermetrics/webrtc-stats": "github:buddhikajay/webrtc-stats",
+    "@peermetrics/webrtc-stats": "git+https://github.com/buddhikajay/webrtc-stats.git",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
