--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "node": ">=6.0.0"
   },
   "scripts": {
+    "clean": "rimraf dist",
     "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && npm run copy && rollup -c rollup.config.build.ts",
-    "start": "npm run copy && rollup -c rollup.config.ts -w",
+    "prebuild": "npm run clean",
+    "build": "webpack --mode=production",
+    "start": "webpack serve --mode=development --open",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
@@ -32,17 +33,16 @@
     "commit": "git-cz",
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged",
     "travis-deploy-once": "travis-deploy-once",
-    "copy": "cpy './src/index.html' './dist'",
+    "copy": "cpy ./src/index.html ./dist",
     "generate-doc": "typedoc --out docs --theme minimal src",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "{src,test}/**/*.ts": [
-      "prettier --write",
-      "git add"
+    "{src,test}/**/*.{ts,js}": [
+      "prettier --write"
     ]
   },
   "config": {
@@ -80,10 +80,6 @@
       "./setup.jest.js"
     ]
   },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -91,13 +87,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.0",
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
-    "@rollup/plugin-alias": "^3.1.8",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-eslint": "^8.0.1",
+    "@hot-loader/react-dom": "^17.0.2",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -106,40 +100,38 @@
     "@storybook/testing-library": "0.0.9",
     "@types/debug": "^4.1.5",
     "@types/jest": "^23.3.2",
-    "@types/node": "^10.11.0",
+    "@types/node": "^10.17.60",
     "@types/qs": "^6.9.7",
+    "@types/uuid": "^8.3.4",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
+    "copy-webpack-plugin": "^10.2.4",
     "core-js": "^3.19.3",
     "coveralls": "^3.0.2",
     "cpy-cli": "^3.1.1",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "dotenv": "^10.0.0",
-    "husky": "^1.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.0",
     "jest": "^23.6.0",
     "jest-config": "^23.6.0",
-    "lint-staged": "^8.0.0",
+    "lint-staged": "^12.3.7",
+    "lodash-webpack-plugin": "^0.11.6",
     "lodash.camelcase": "^4.3.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^1.19.1",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
-    "rollup": "^2.61.1",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-prettier": "^2.1.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.31.1",
     "semantic-release": "^15.9.16",
     "shelljs": "^0.8.3",
     "travis-deploy-once": "^5.0.9",
     "ts-jest": "^23.10.2",
+    "ts-loader": "^9.2.8",
     "ts-node": "^7.0.1",
     "tslib": "^2.3.1",
     "tslint": "^5.11.0",
@@ -147,16 +139,21 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.20.13",
     "typescript": "^4.5.2",
+    "webpack": "^5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
     "wrtc": "^0.4.6"
   },
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.7.1",
+    "@mui/styles": "^5.5.1",
     "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git#fix/update-webrtc-stats-repository",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
-    "@mui/styles": "^5.5.1",
     "@peermetrics/webrtc-stats": "git+https://github.com/buddhikajay/webrtc-stats.git",
+    "@reduxjs/toolkit": "^1.8.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
@@ -164,7 +161,10 @@
     "qs": "^6.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "socket.io-client": "^4.4.0",
-    "unistore": "^3.5.2"
+    "unistore": "^3.5.2",
+    "uuid": "^8.3.2",
+    "webrtc-adapter": "^8.1.1"
   }
 }
