--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "jsxImportSource": "@emotion/react",
     "moduleResolution": "node",
     "target": "es5",
-    "module":"es2015",
+    "module": "es2015",
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "strict": true,
     "sourceMap": true,
@@ -14,11 +14,8 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
-    "typeRoots": [
-      "node_modules/@types", //"@types"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "skipLibCheck": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
