--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.7.1",
     "@mui/styles": "^5.5.1",
-    "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git",
+    "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git#feat/dashboard-log-devices-browserinfo",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@peermetrics/webrtc-stats": "git+https://github.com/buddhikajay/webrtc-stats.git",
