--- a/package.json
+++ b/package.json
@@ -148,15 +148,16 @@
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.7.1",
-    "@mui/styles": "^5.5.1",
     "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git#feat/dashboard-log-devices-browserinfo",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
+    "@mui/styles": "^5.5.1",
     "@peermetrics/webrtc-stats": "git+https://github.com/buddhikajay/webrtc-stats.git",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.21.1",
+    "detectrtc": "^1.4.1",
     "nanoid": "^3.1.30",
     "qs": "^6.10.2",
     "react": "^17.0.2",
