feat/WMS-48: Dynamic ICE server support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "emitDecoratorMetadata": true,
     "outDir": "dist/lib",
     "typeRoots": ["node_modules/@types"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "downlevelIteration": true
   },
   "include": ["src"]
 }
