--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@storybook/testing-library": "0.0.9",
     "@types/debug": "^4.1.5",
     "@types/jest": "^23.3.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^10.17.60",
     "@types/qs": "^6.9.7",
     "@types/uuid": "^8.3.4",
@@ -154,7 +155,8 @@
     "@reduxjs/toolkit": "^1.8.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "axios": "^0.21.1",
+    "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "detectrtc": "^1.4.1",
     "nanoid": "^3.1.30",
     "qs": "^6.10.2",
