--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "description": "",
   "keywords": [],
+  "types": "./dist/lib/lib-call-quality-monitoring.d.ts",
   "main": "./dist/lib/lib-call-quality-monitoring.js",
+  "exports": {
+    ".": {
+      "require": "./dist/lib/lib-call-quality-monitoring.js"
+    }
+  },
   "browser": "./dist/browser.js",
   "files": [
     "dist"
