--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@ compiled
 .awcache
 docs
 
-
 # Created by https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,windows,macos,jetbrains+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,visualstudiocode,windows,macos,jetbrains+all
 
@@ -35,7 +34,6 @@ fabric.properties
 
 .idea/**/*
 
-
 ### macOS ###
 # General
 .DS_Store
@@ -44,7 +42,6 @@ fabric.properties
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -249,3 +246,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,windows,macos,jetbrains+all
+
+.npmrc
