--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@meetrix/lib-monitoring",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "",
   "keywords": [],
   "types": "./dist/lib/lib-call-quality-monitoring.d.ts",
@@ -153,7 +153,7 @@
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.7.1",
-    "@meetrix/webrtc-monitoring-common-lib": "git+https://gitlab.com/meetrix/products/webrtc-monitoring/webrtc-monitoring-common-lib.git",
+    "@meetrix/webrtc-monitoring-common-lib": "^0.1.17",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.5.1",
