--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 API_KEY=
-TURN_URI=
-TURN_USERNAME=
-TURN_CREDENTIALS=
-STUN_URI=
+TURN_URI=turn:127.0.0.1:3478?transport=tcp
+TURN_USERNAME=user
+TURN_CREDENTIALS=asdfasdf
+STUN_URI=stun:stun.l.google.com:19302
+
