update env variables

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 NODE_ENV=development
+REACT_APP_ENVIRONMENT=development
 API_KEY=
 TURN_URI=turn:127.0.0.1:3478?transport=tcp
 TURN_USERNAME=user
 TURN_CREDENTIALS=asdfasdf
 STUN_URI=stun:stun.l.google.com:19302
+REACT_APP_API_BASE_URL=http://localhost:9100
+PUBLIC_URL=/
 
