--- a/package.json
+++ b/package.json
@@ -145,7 +145,6 @@
     "typedoc": "^0.20.13",
     "typescript": "^4.5.2",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "wrtc": "^0.4.6"
   },
@@ -173,6 +172,7 @@
     "uuid": "^8.3.2",
     "webrtc-adapter": "^8.1.1",
     "rimraf": "^2.6.2",
-    "webpack": "^5.70.0"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
