--- a/package.json
+++ b/package.json
@@ -114,7 +114,6 @@
     "clean-webpack-plugin": "^4.0.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
-    "copy-webpack-plugin": "^10.2.4",
     "core-js": "^3.19.3",
     "coveralls": "^3.0.2",
     "cpy-cli": "^3.1.1",
@@ -173,6 +172,7 @@
     "webrtc-adapter": "^8.1.1",
     "rimraf": "^2.6.2",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "copy-webpack-plugin": "^10.2.4"
   }
 }
