--- a/package.json
+++ b/package.json
@@ -125,7 +125,6 @@
     "jest": "^23.6.0",
     "jest-config": "^23.6.0",
     "lint-staged": "^12.3.7",
-    "lodash-webpack-plugin": "^0.11.6",
     "lodash.camelcase": "^4.3.0",
     "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^1.19.1",
@@ -173,6 +172,7 @@
     "rimraf": "^2.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "copy-webpack-plugin": "^10.2.4"
+    "copy-webpack-plugin": "^10.2.4",
+    "lodash-webpack-plugin": "^0.11.6"
   }
 }
