--- a/package.json
+++ b/package.json
@@ -142,7 +142,6 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.20.13",
     "typescript": "^4.5.2",
-    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.7.4",
     "wrtc": "^0.4.6"
   },
@@ -173,6 +172,7 @@
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "copy-webpack-plugin": "^10.2.4",
-    "lodash-webpack-plugin": "^0.11.6"
+    "lodash-webpack-plugin": "^0.11.6",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
