--- a/package.json
+++ b/package.json
@@ -111,7 +111,6 @@
     "@types/uuid": "^8.3.4",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
-    "clean-webpack-plugin": "^4.0.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "core-js": "^3.19.3",
@@ -120,7 +119,6 @@
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "dotenv": "^10.0.0",
-    "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
     "jest": "^23.6.0",
     "jest-config": "^23.6.0",
@@ -173,6 +171,8 @@
     "webpack-cli": "^4.9.2",
     "copy-webpack-plugin": "^10.2.4",
     "lodash-webpack-plugin": "^0.11.6",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
