--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ production_build:
     - echo "Created the following .npmrc:"; cat .npmrc
     # Build, using the cache if available
     #- CI=false npm ci --cache .npm --prefer-offline
-    - CI=false npm install
+    - CI=false NODE_ENV=development npm install
     - cd node_modules/@peermetrics/webrtc-stats && npm install && npm run build
     - cd ../../.. && npm run build
   artifacts:
