--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
   "dependencies": {
     "@emotion/css": "^11.5.0",
     "@emotion/react": "^11.7.1",
-    "@meetrix/webrtc-monitoring-common-lib": "git+https://github.com/meetrix/webrtc-monitoring-common-lib",
+    "@meetrix/webrtc-monitoring-common-lib": "git+https://github.com/meetrix/webrtc-monitoring-common-lib.git",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.5.1",
