--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,8 @@ production_build:
     - echo "Created the following .npmrc:"; cat .npmrc
     # Build, using the cache if available
     #- CI=false npm ci --cache .npm --prefer-offline
-    - CI=false NODE_ENV=development npm install
-    - cd node_modules/@peermetrics/webrtc-stats && NODE_ENV=development npm install && npm run build
+    - CI=false npm ci --also=dev
+    - cd node_modules/@peermetrics/webrtc-stats && npm ci --also=dev && npm run build
     - cd ../../.. && npm run build
   artifacts:
     paths:
@@ -125,8 +125,8 @@ branch_build:
       fi
     - echo "Created the following .npmrc:"; cat .npmrc
     # Build, using the cache if available
-    - CI=false npm install
-    - cd node_modules/@peermetrics/webrtc-stats && npm install && npm run build
+    - CI=false npm ci --also=dev
+    - cd node_modules/@peermetrics/webrtc-stats && npm ci --also=dev && npm run build
     - cd ../../.. && npm run build
   artifacts:
     paths:
