--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ production_build:
     # Build, using the cache if available
     #- CI=false npm ci --cache .npm --prefer-offline
     - CI=false npm ci --also=dev
-    - cd node_modules/@peermetrics/webrtc-stats && npm ci --also=dev && npm run build
+    - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build
     - cd ../../.. && npm run build
   artifacts:
     paths:
@@ -126,7 +126,7 @@ branch_build:
     - echo "Created the following .npmrc:"; cat .npmrc
     # Build, using the cache if available
     - CI=false npm ci --also=dev
-    - cd node_modules/@peermetrics/webrtc-stats && npm ci --also=dev && npm run build
+    - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build
     - cd ../../.. && npm run build
   artifacts:
     paths:
