--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,15 +20,18 @@ production_build:
     - if: $CI_COMMIT_REF_NAME =~ /^v\d+\.\d+\.\d+.*$/
   script:
     # If no .npmrc is included in the repo, generate a temporary one that is configured to install from GitLab's NPM registry
-    - |
-      if [[ ! -f .npmrc ]]; then
-        echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#project-level-npm-endpoint-1'
-        {
-          echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/packages/npm/"
-          echo "${CI_API_V4_URL#http*:}/packages/npm/:_authToken=\${CI_JOB_TOKEN}"
-        } >> .npmrc
-      fi
-    - echo "Created the following .npmrc:"; cat .npmrc
+    # - |
+    #   if [[ ! -f .npmrc ]]; then
+    #     echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#project-level-npm-endpoint-1'
+    #     {
+    #       echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/packages/npm/"
+    #       echo "${CI_API_V4_URL#http*:}/packages/npm/:_authToken=\${CI_JOB_TOKEN}"
+    #     } >> .npmrc
+    #   fi
+    # - echo "Created the following .npmrc:"; cat .npmrc
+    
+    - apt update
+    - apt install -y git
     # Build, using the cache if available
     #- CI=false npm ci --cache .npm --prefer-offline
     - CI=false npm ci --also=dev
@@ -115,16 +118,20 @@ branch_build:
       when: manual
   script:
     # If no .npmrc is included in the repo, generate a temporary one that is configured to install from GitLab's NPM registry
-    - |
-      if [[ ! -f .npmrc ]]; then
-        echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#project-level-npm-endpoint-1'
-        {
-          echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/packages/npm/"
-          echo "${CI_API_V4_URL#http*:}/packages/npm/:_authToken=\${CI_JOB_TOKEN}"
-        } >> .npmrc
-      fi
-    - echo "Created the following .npmrc:"; cat .npmrc
+    # - |
+    #   if [[ ! -f .npmrc ]]; then
+    #     echo 'No .npmrc found! Creating one now. Please review the following link for more information: https://docs.gitlab.com/ee/user/packages/npm_registry/index.html#project-level-npm-endpoint-1'
+    #     {
+    #       echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/packages/npm/"
+    #       echo "${CI_API_V4_URL#http*:}/packages/npm/:_authToken=\${CI_JOB_TOKEN}"
+    #     } >> .npmrc
+    #   fi
+    # - echo "Created the following .npmrc:"; cat .npmrc
+    
+    - apt update
+    - apt install -y git
     # Build, using the cache if available
+    #- CI=false npm ci --cache .npm --prefer-offline
     - CI=false npm ci --also=dev
     - cd node_modules/@peermetrics/webrtc-stats && npm i --also=dev && npm run build
     - cd ../../.. && npm run build
